add parameters docker-compose.yml

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,10 @@
 spring.datasource.url= jdbc:postgresql://localhost:5432/parking-control-db
 spring.datasource.username=postgres
-spring.datasource.password=banco123
+spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl=true
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=true
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true  	
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
 
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
