--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,11 @@
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 
+	<organization>
+		<name>Michelli Brito</name>
+		<url>https://github.com/MichelliBrito/parking-control-api</url>
+	</organization>
+
 	<groupId>com.api</groupId>
 	<artifactId>parking-control</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
@@ -41,31 +46,21 @@
 		</dependency>
 
 		<dependency>
-			<groupId>io.springfox</groupId>
-			<artifactId>springfox-swagger2</artifactId>
-			<version>2.7.0</version>
-		</dependency>
-
-		<dependency>
-			<groupId>io.springfox</groupId>
-			<artifactId>springfox-swagger-ui</artifactId>
-			<version>2.7.0</version>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<scope>runtime</scope>
+			<optional>true</optional>
 		</dependency>
 
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-jersey</artifactId>
 		</dependency>
 
 		<dependency>
