--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,6 @@ spring.jpa.generate-ddl=true
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true  	
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
+server.port= 8080
 
 
