examples spring annotations

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+spring.profiles.active=dev
+
 spring.datasource.url= jdbc:postgresql://localhost:5432/parking-control-db
 spring.datasource.username=postgres
 spring.datasource.password=banco123
@@ -5,3 +7,6 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
+app.name=Parking Control API
+app.port=80
+app.host=parkingcontrolapp
